# ddr-but-you-have-to-be-on-beat-and-everything

./: .gitignore  CMakeLists.txt  README.md  ddr-but-you-have-to-be-on-beat-and-everything  makefile
include/: game.hpp  inputManager.hpp  mapManager.hpp  music.hpp  sceneManager.hpp
mapmakingsrc/: makefile  output.map  writer.cpp
maps/among-sus/: susus.map
maps/white-space/: map.map  output.map
src/: game.cpp  inputManager.cpp  main.cpp  mapManager.cpp  music.cpp  sceneManager.cpp
